# retro

./: .clang-format  .gitignore  .gitmodules  .gitpod.yml  .travis.yml  CHANGES.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  IntegratorsGuide.md  LICENSE  LICENSES.md  MANIFEST.in  README.md  conftest.py  setup.cfg  setup.py  travis.py
cores/n64/GLideN64/src/: CMakeLists.txt  CRC.h  Combiner.cpp  Combiner.h  CommonPluginAPI.cpp  Config.cpp  Config.h  DebugDump.cpp  Debugger.cpp  Debugger.h  DepthBuffer.cpp  DepthBuffer.h  DisplayWindow.cpp  DisplayWindow.h  FrameBuffer.cpp  FrameBuffer.h  FrameBufferEmulationIssues.txt  FrameBufferInfo.cpp  GBI.cpp  GBI.h  GraphicsDrawer.cpp  GraphicsDrawer.h  Log.cpp  Log.h  Log_android.cpp  MemoryStatus.h  MupenPlusPluginAPI.cpp  NoiseTexture.cpp  PaletteTexture.cpp  PaletteTexture.h  PluginAPI.h  PostProcessor.cpp  RDP.cpp  RSP.cpp  TexrectDrawer.cpp  TexrectDrawer.h  TextDrawer.cpp  TextureFilterHandler.cpp  Textures.cpp  Textures.h  (+10 more)
cores/n64/GLideN64/src/BufferCopy/: ColorBufferToRDRAM.cpp  DepthBufferToRDRAM.cpp  RDRAMtoColorBuffer.cpp
cores/n64/GLideN64/src/GLideNHQ/: CMakeLists.txt  Ext_TxFilter.h  TxCache.cpp  TxCache.h  TxFilter.cpp  TxHiResCache.cpp  TxHiResCache.h  TxImage.cpp  TxQuantize.cpp  TxTexCache.cpp  TxTexCache.h  TxUtil.cpp  TxUtil.h  txWidestringWrapper.h
cores/n64/GLideN64/src/GLideNUI/: AboutDialog.ui  ConfigDialog.cpp  ConfigDialog.h  Settings.cpp  configDialog.ui
cores/n64/GLideN64/src/Graphics/: ColorBufferReader.cpp  CombinerProgram.cpp  Context.cpp  Context.h  ContextImpl.h  Parameters.h
cores/n64/GLideN64/src/Neon/: gSPNeon.cpp
cores/n64/GLideN64/src/common/: CommonAPIImpl_common.cpp
cores/n64/GLideN64/src/mupenplus/: Config_mupenplus.cpp  GLideN64_mupenplus.h  MemoryStatus_mupenplus.cpp  MupenPlusAPIImpl.cpp
cores/n64/GLideN64/src/osal/: osal_files.h  osal_files_ios.mm  osal_files_unix.c  osal_files_win32.c
cores/n64/GLideN64/src/uCodes/: F3DEX2.cpp  F3DEX2CBFD.cpp  F5Indi_Naboo.cpp  F5Rogue.cpp  S2DEX.cpp  S2DEX.h  Turbo3D.cpp  ZSort.cpp  ZSortBOSS.cpp
cores/n64/GLideN64/src/windows/: Config_windows.cpp  MemoryStatus_windows.cpp
cores/n64/mupen64plus-rsp-paraLLEl/: .gitignore  .gitrepo  CMakeLists.txt  CREDITS.txt  LICENSE  LICENSE.MIT  android_fuzz_runner.sh  android_test_runner.sh  build_android_aarch64.sh  build_native.sh  compare_test_results.sh  cpu_state.hpp  debug_jit.cpp  debug_jit.hpp  debug_rsp.cpp  debug_rsp.hpp  format_all.sh  llvm_jit.cpp  llvm_jit.hpp  main.cpp  parallel.cpp  rsp_1.1.h  rsp_disasm.cpp  rsp_disasm.hpp  rsp_jit.cpp  rsp_jit.hpp  rsp_op.hpp  rsp_vu_fuzzer.cpp  state.hpp
cores/n64/mupen64plus-rsp-paraLLEl/debug-toolchain/: Makefile  Makefile.mips  add.s  addi.s  and.s  andi.s  beq-impossible-delay-slot-both-taken.s  beq-impossible-delay-slot-first-taken.s  beq-impossible-delay-slot-second-taken.s  bgez.s  bgezal.s  bgtz.s  blez.s  bltz.s  bltzal.s  bne.s  bug-shl-into-branch.s  cop0.s  cop2-basic.s  cop2-ls.s  cop2-vector.s  delay-slot-before-break.s  delay-slot-before-new-block-illegal.s  delay-slot-before-new-block-not-taken.s  delay-slot-before-new-block.s  j.s  jal-into-indirect-delay-slot.s  jal.s  jalr.s  jr.s  lb.s  lbu.s  lh-unaligned.s  lh.s  lhu-unaligned.s  lhu.s  lui.s  lw-unaligned-in-branch-delay.s  lw-unaligned.s  lw.s  (+27 more)
cores/n64/mupen64plus-rsp-paraLLEl/lightning/: .gitattributes  .gitignore  .gitrepo  AUTHORS  ChangeLog  Makefile.am  NEWS  README  THANKS  TODO  configure.ac  lightning.pc.in  size.c
cores/n64/mupen64plus-rsp-paraLLEl/lightning/check/: 3to2.ok  3to2.tst  Makefile.am  add.ok  add.tst  align.tst  all.tst  allocai.ok  allocai.tst  allocar.ok  allocar.tst  alu.inc  alu_add.tst  alu_and.tst  alu_com.tst  alu_div.tst  alu_lsh.tst  alu_mul.tst  alu_neg.tst  alu_or.tst  alu_rem.tst  alu_rsb.tst  alu_rsh.tst  alu_sub.tst  alu_xor.tst  alux_add.tst  alux_sub.tst  bp.tst  branch.tst  call.ok  call.tst  carg.c  carry.tst  ccall.c  check.arm.sh  check.arm.swf.sh  check.arm4.swf.sh  check.nodata.sh  check.sh  check.swf.sh  (+43 more)
cores/n64/mupen64plus-rsp-paraLLEl/lightning/doc/: .cvsignore  .gitignore  Makefile.am  body.texi  fact.c  ifib.c  incr.c  lightning.texi  printf.c  rfib.c  rpn.c  version.texi
cores/n64/mupen64plus-rsp-paraLLEl/lightning/include/: Makefile.am  lightning.h  lightning.h.in
cores/n64/mupen64plus-rsp-paraLLEl/lightning/lib/: Makefile.am  jit_aarch64-cpu.c  jit_aarch64-fpu.c  jit_aarch64-sz.c  jit_aarch64.c  jit_alpha-cpu.c  jit_alpha-fpu.c  jit_alpha-sz.c  jit_alpha.c  jit_arm-cpu.c  jit_arm-swf.c  jit_arm-sz.c  jit_arm-vfp.c  jit_arm.c  jit_disasm.c  jit_hppa-cpu.c  jit_hppa-fpu.c  jit_hppa-sz.c  jit_hppa.c  jit_ia64-cpu.c  jit_ia64-fpu.c  jit_ia64-sz.c  jit_ia64.c  jit_memory.c  jit_mips-cpu.c  jit_mips-fpu.c  jit_mips-sz.c  jit_mips.c  jit_names.c  jit_note.c  jit_ppc-cpu.c  jit_ppc-fpu.c  jit_ppc-sz.c  jit_ppc.c  jit_print.c  jit_rewind.c  (+19 more)
cores/n64/mupen64plus-rsp-paraLLEl/rsp/: cp0.cpp  cp2.cpp  ls.cpp  pipeline.h  reciprocal.cpp  reciprocal.h  registers.md  vfunctions.cpp
src/ui/: CMakeLists.txt  CheatModel.cpp  CheatModel.h  ControlsWidget.cpp  ControlsWidget.h  ControlsWidget.ui  DoneNodeWidget.cpp  DoneNodeWidget.h  DoneNodeWidget.ui  DoneSpecWidget.cpp  DoneSpecWidget.h  DoneSpecWidget.ui  EmulatorController.cpp  EmulatorController.h  GameDataModel.cpp  GameDataModel.h  Info.plist.in  MainWindow.cpp  MainWindow.h  MainWindow.ui  Makefile  RewardSpecWidget.cpp  RewardSpecWidget.h  RewardSpecWidget.ui  ScenarioEditor.cpp  ScenarioEditor.h  ScenarioEditor.ui  Screen.cpp  Screen.h  SearchModel.cpp  SearchModel.h  SearchResultsModel.cpp  SearchResultsModel.h  logo.icns  main.cpp  win32.rc.in
tests/: CMakeLists.txt  Makefile  data.cpp  dummy.json  emulator.cpp  memory-overlay.cpp  memory.cpp  script.cpp  search.cpp  test_env.py  test_paths.py
tests/data/: test_integration.py  test_load.py  test_roms.py
tests/roms/: Anthrox-SineDotDemo.sfc  Dekadence-Dekadrive.md  Dr88-FamiconIntro.nes  Vantage-LostMarbles.gba  automaton.a26  benryves-SegaTween.gg  blind-happy10.sms  chrisc-512_Colours.pce  dox-fire.gb
(+6532 files in other folders)
